Changed backgroud color

--- a/TecBlog/index.html
+++ b/TecBlog/index.html
@@ -21,5 +21,8 @@
         <a class="menuArea" href="index.html">Informatics</a>
       </div>
     </div>
+    <div class="middleContainer">
+        teste
+    </div>
   </body>
 </html>
