--- a/TecBlog/index.html
+++ b/TecBlog/index.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TechBlog - your tech updates</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <div class="upperContainer">
@@ -22,7 +27,21 @@
       </div>
     </div>
     <div class="middleContainer">
-        teste
+      <div class="content">
+        <div>
+            <div class="innerContent">
+              <h2 class="title">Post's title</h2>
+              <span>posted in march 20th 2023</span>
+              <img src="Images/imagem1.jpg">
+              <p class="text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea vitae expedita, non perspiciatis deleniti dignissimos laudantium cum cupiditate, libero facere doloribus modi aliquid nobis tempora illum corrupti, qui exercitationem reprehenderit.
+              </p>
+              <a href="">...Leia Mais</a>
+    
+        </div>
+      </div>
+      <div class="side-content">content</div>
+      <div class="footnote">todos os direitos reservados</div>
     </div>
   </body>
 </html>
