--- a/Notícias/src/brasil.html
+++ b/Notícias/src/brasil.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <title>Notícias da cidade</title>
-    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="../css/styles.css" />
   </head>
-  <body id="tres-colunas" class="home">
+  <body class="brasil">
     <div id="container">
       <div id="topo">
         <h1 class="logo">Notícias Cidade</h1>
         <ul id="navegacao">
-          <li class="primeiro"><a id="home" href="index.html">Home</a></li>
+          <li class="primeiro"><a id="home" href="../index.html">Home</a></li>
           <li><a id="brasil" href="/src/brasil.html">Brasil</a></li>
           <li>
             <a id="internacional" href="/src/internacional.html"
