--- a/Notícias/src/fotos.html
+++ b/Notícias/src/fotos.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <title>Notícias da cidade</title>
-    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="../css/styles.css" />
   </head>
-  <body id="tres-colunas" class="home">
+  <body id="uma-coluna" class="fotos">
     <div id="container">
       <div id="topo">
         <h1 class="logo">Notícias Cidade</h1>
         <ul id="navegacao">
-          <li class="primeiro"><a id="home" href="index.html">Home</a></li>
+          <li class="primeiro"><a id="home" href="../index.html">Home</a></li>
           <li><a id="brasil" href="/src/brasil.html">Brasil</a></li>
           <li>
             <a id="internacional" href="/src/internacional.html"
@@ -25,8 +25,6 @@
       </div>
       <div id="conteudo">
         <div id="primario">Primário</div>
-        <div id="secundario">Secundário</div>
-        <div id="lateral">Lateral</div>
       </div>
     </div>
     <div id="container-rodape" style="clear: both">
