--- a/Notícias/src/economia.html
+++ b/Notícias/src/economia.html
@@ -3,19 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <title>Notícias da cidade</title>
-    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="../css/styles.css" />
   </head>
-  <body id="tres-colunas" class="home">
+  <body id="tres-colunas" class="economia">
     <div id="container">
       <div id="topo">
         <h1 class="logo">Notícias Cidade</h1>
         <ul id="navegacao">
-          <li class="primeiro"><a id="home" href="index.html">Home</a></li>
+          <li class="primeiro"><a id="home" href="../index.html">Home</a></li>
           <li><a id="brasil" href="/src/brasil.html">Brasil</a></li>
           <li>
-            <a id="internacional" href="/src/internacional.html"
-              >Internacional</a
-            >
+            <a id="internacional" href="/src/internacional.html">Internacional</a>
           </li>
           <li><a id="economia" href="/src/economia.html">Economia</a></li>
           <li><a id="saude" href="/src/saude.html">Saúde</a></li>
