--- a/Notícias/src/saude.html
+++ b/Notícias/src/saude.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>Notícias da cidade</title>
-    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="../css/styles.css" />
   </head>
-  <body id="tres-colunas" class="home">
+  <body id="tres-colunas" class="saude">
     <div id="container">
       <div id="topo">
         <h1 class="logo">Notícias Cidade</h1>
