--- a/Notícias/src/internacional.html
+++ b/Notícias/src/internacional.html
@@ -11,16 +11,14 @@
         <h1 class="logo">Notícias Cidade</h1>
         <ul id="navegacao">
           <li class="primeiro"><a id="home" href="../index.html">Home</a></li>
-          <li><a id="brasil" href="/src/brasil.html">Brasil</a></li>
+          <li><a id="brasil" href="../src/brasil.html">Brasil</a></li>
           <li>
-            <a id="internacional" href="/src/internacional.html"
-              >Internacional</a
-            >
+            <a id="internacional" href="../src/internacional.html">Internacional</a>
           </li>
-          <li><a id="economia" href="/src/economia.html">Economia</a></li>
-          <li><a id="saude" href="/src/saude.html">Saúde</a></li>
-          <li><a id="ciencia" href="/src/ciencia.html">Ciência</a></li>
-          <li><a id="fotos" href="/src/fotos.html">Fotos</a></li>
+          <li><a id="economia" href="../src/economia.html">Economia</a></li>
+          <li><a id="saude" href="../src/saude.html">Saúde</a></li>
+          <li><a id="ciencia" href="../src/ciencia.html">Ciência</a></li>
+          <li><a id="fotos" href="../src/fotos.html">Fotos</a></li>
         </ul>
       </div>
       <div id="conteudo">
