--- a/Notícias/src/economia.html
+++ b/Notícias/src/economia.html
@@ -10,7 +10,7 @@
       <div id="topo">
         <h1 class="logo">Notícias Cidade</h1>
         <ul id="navegacao">
-          <li class="primeiro"><a id="home" href="./index.html">Home</a></li>
+          <li class="primeiro"><a id="home" href="../index.html">Home</a></li>
           <li><a id="brasil" href="./src/brasil.html">Brasil</a></li>
           <li>
             <a id="internacional" href="./src/internacional.html">Internacional</a>
