New structure added

--- a/Notícias/index.html
+++ b/Notícias/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Notícias da cidade</title>
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+    <script src="index.js" type="text/javascript" defer></script>
   </head>
   <body id="tres-colunas" class="home">
     <div id="container">
@@ -24,9 +25,81 @@
         </ul>
       </div>
       <div id="conteudo">
-        <div id="primario">Primário</div>
-        <div id="secundario">Secundário</div>
-        <div id="lateral">Lateral</div>
+        <div id="primario">
+          <div class="caixa">
+            <h2>Entrevistas</h2>
+            <div class="caixa-conteudo">
+              <h3>Nova Legislação</h3>
+              <img
+                class="imagem-principal"
+                src="/imagens/taxi.jpg"
+                alt=""
+                width="100%"
+              />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Provident deserunt amet molestias quae non fugiat id! Ab sequi
+                non natus eos! Beatae saepe deserunt enim dolore, sint est
+                reiciendis vero?
+              </p>
+              <a href="">Leia mais...</a>
+            </div>
+          </div>
+        </div>
+        <div id="secundario">
+          <div class="caixa">
+            <h2>Última entrevista</h2>
+            <div class="caixa-conteudo">
+              <h3>Entrevista com felipe silva</h3>
+              <img
+                class="imagem-principal"
+                src="/imagens/taxi.jpg"
+                alt=""
+                width="100%"
+              />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Provident deserunt amet molestias quae non fugiat id! Ab sequi
+                non natus eos! Beatae saepe deserunt enim dolore, sint est
+                reiciendis vero?
+              </p>
+              <a href="">Leia mais...</a>
+            </div>
+          </div>
+        </div>
+        <div id="lateral">
+          <div class="caixa">
+            <h2>Entrevistas</h2>
+            <div class="caixa-conteudo">
+              <ul>
+                <li><a href=""> José Almeida</a></li>
+                <li><a href=""> Carol Limeira</a></li>
+                <li><a href=""> Guilherme Guerra</a></li>
+                <li><a href=""> Alberto Aspargos</a></li>
+                <li><a href=""> Carla Hoffmann</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="caixa">
+            <h2>New</h2>
+            <div class="caixa-conteudo">
+              <form action="">
+                <div>
+                  <label>E-mail: </label>
+                  <input
+                    type="email"
+                    name=""
+                    id=""
+                    placeholder="Digite seu e-mail"
+                  />
+                </div>
+                <div>
+                  <input class="submit" type="submit" value="Cadastrar" />
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div id="container-rodape" style="clear: both">
