list of content v2

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Site references</title>
   </head>
   <body>
-    <h1>Lista de sites</h1>
+    <h1>List of content</h1>
     <ul>
       <li>
         <a href="/Museu/index.html">Museu Nacional</a>
