--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <h1>List of content</h1>
     <ul>
       <li>
-        <a href="/Museu/index.html">Museu Nacional</a>
+        <a href="Museu/index.html">Museu Nacional</a>
       </li>
 
       <li>
-        <a href="/Notícias/index.html">Site de Notícias</a>
+        <a href="Notícias/index.html">Site de Notícias</a>
       </li>
 
       <li>
-        <a href="/TecBlog/index.html">Tec blog</a>
+        <a href="TecBlog/index.html">Tec blog</a>
       </li>
     </ul>
   </body>
