--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </li>
 
       <li>
-        <a href="./TecBlog/l">Tec blog</a>
+        <a href="./TecBlog/">Tec blog</a>
       </li>
     </ul>
   </body>
