--- a/Museu/index.html
+++ b/Museu/index.html
@@ -2,10 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/styles.css" />
-    <link rel="stylesheet" href="/css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/normalize.css" />
     <title>Museu nacional</title>
   </head>
-  <body></body>
+  <body>
+    <div id="container">
+      <!-- Início container-->
+      <header>
+        <div id="logo">
+          <h1><a href="">Museu Nacional</a></h1>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Expo</a></li>
+            <li><a href="">Research</a></li>
+            <li><a href="">Library</a></li>
+            <li><a href="">Videos</a></li>
+            <li><a href="">Photos</a></li>
+            <li><a href="">Contacts</a></li>
+          </ul>
+        </nav>
+      </header>
+    </div>
+    <!-- Fim container-->
+  </body>
 </html>
