--- a/Museu/index.html
+++ b/Museu/index.html
@@ -27,5 +27,9 @@
       </header>
     </div>
     <!-- Fim container-->
+    <div id="principal">
+    <div id="conteudo">Conteudo</div>
+    <aside>Lateral</aside>
+  </div>
   </body>
 </html>
