--- a/Museu/index.html
+++ b/Museu/index.html
@@ -25,11 +25,54 @@
           </ul>
         </nav>
       </header>
+      <!-- Fim container-->
+      <div id="principal">
+        <div id="conteudo"><img src="./img/museu.png" alt="" /></div>
+        <aside>
+          <section id="depoimento">
+            <img src="./img/depoimento.png" alt="" />
+          </section>
+          <section id="visita">
+            <h4>Faça uma visita</h4>
+            <form>
+              <fieldset>
+                <legend>Selecione uma data</legend>
+                <label for="data">Data</label>
+                <input class="campo" type="text" id="data" value="dd/mm/aaaa" />
+
+                <label for="qtd">Qtd de pessoas</label>
+                <input
+                  style="width: 20px"
+                  class="campo"
+                  type="text"
+                  id="qtd"
+                  value="1"
+                />
+              </fieldset>
+              <input
+                class="botao"
+                type="submit"
+                value="Verificar disponibilidade"
+              />
+            </form>
+          </section>
+          <section id="galeria">
+            <h4>Galeria de fotos</h4>
+            <a href="">
+              <img src="./img/imagem1.jpg" height="93" width="93" />
+            </a>
+            <a href="">
+              <img src="./img/imagem2.jpg" height="93" width="93" />
+            </a>
+            <a href="">
+              <img src="./img/imagem3.jpg" height="93" width="93" />
+            </a>
+            <a href="">
+              <img src="./img/imagem4.jpg" height="93" width="93" />
+            </a>
+          </section>
+        </aside>
+      </div>
     </div>
-    <!-- Fim container-->
-    <div id="principal">
-    <div id="conteudo">Conteudo</div>
-    <aside>Lateral</aside>
-  </div>
   </body>
 </html>
