--- a/Museu/index.html
+++ b/Museu/index.html
@@ -27,7 +27,72 @@
       </header>
       <!-- Fim container-->
       <div id="principal">
-        <div id="conteudo"><img src="./img/museu.png" alt="" /></div>
+        <div id="conteudo">
+          <section id="capa">
+            <img src="./img/museu.png" alt="" />
+          </section>
+
+          <section id="postagens">
+            <article id="video">
+              <h3>Video: Conheça o Museu</h3>
+              <iframe
+                width="310"
+                height="170"
+                src="https://www.youtube.com/embed/RGUYb-hivrc"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
+            </article>
+            <article id="mapa">
+              <h3>Mapa: Encontre o museu</h3>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.206445593931!2d-43.22871758446553!3d-22.905755043594073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997e58a085b7af%3A0x4d11e9a933d38ce3!2sMuseu%20Nacional%20-%20UFRJ!5e0!3m2!1spt-BR!2sbr!4v1675887305263!5m2!1spt-BR!2sbr"
+                width="310"
+                height="170"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </article>
+
+            <article id="exposicoes">
+              <h3>Exposições</h3>
+              <ul>
+                <li><a href="#">Os assustadores insetos</a></li>
+                <li>
+                  <a href="#"
+                    >O Crâneo de Luiza, a mulher mais antiga do Brasil</a
+                  >
+                </li>
+                <li>
+                  <a href="#">Preguiça gigante e tigre-dentes-de-sabre</a>
+                </li>
+                <li><a href="#">Plantas do Brasil Central</a></li>
+                <li><a href="#">Arte com Dinossauros</a></li>
+                <li>
+                  <a href="#"><strong>Veja Todos...</strong></a>
+                </li>
+              </ul>
+            </article>
+            <article id="historia">
+              <h3>200 anos de história</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Adipisci, facilis nihil? Odio eaque dolor, consequuntur
+                aspernatur qui harum ad recusandae explicabo quas suscipit modi
+                corrupti excepturi animi blanditiis ipsum at. Lorem ipsum dolor
+                sit amet consectetur, adipisicing elit. Magnam dicta corrupti
+                voluptatum maiores nesciunt iste ea quas nihil maxime quisquam
+                perspiciatis eaque cumque laboriosam nulla, repellat nam
+                consequatur distinctio vel.
+              </p>
+              <a href="#"><strong>Veja Mais...</strong></a>
+            </article>
+          </section>
+        </div>
         <aside>
           <section id="depoimento">
             <img src="./img/depoimento.png" alt="" />
@@ -72,6 +137,20 @@
             </a>
           </section>
         </aside>
+        <footer>
+          <p>
+            <a href="#">Home</a>
+            <a href="#">Expo</a>
+            <a href="#">Research</a>
+            <a href="#">Library</a>
+            <a href="#">Videos</a>
+            <a href="#">Photos</a>
+            <a href="#">Contacts</a>
+          </p>
+          <p>
+            <i class="fas fa-copyright">&copy; 2023 Todos os direitos reservados.</i>
+          </p>
+        </footer>
       </div>
     </div>
   </body>
