Creation of Projeto Padrao

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
       <li>
         <a href="./TecBlog/">Tec blog</a>
       </li>
+
+      <li>
+        <a href="./Padrao/">Projeto Padrão</a>
+      </li>
     </ul>
   </body>
 </html>
