--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </li>
 
       <li>
-        <a href="./finans/">Projeto Padrão</a>
+        <a href="./finans/">Finans</a>
       </li>
     </ul>
   </body>
