--- a/Padrao/index.html
+++ b/Padrao/index.html
@@ -28,9 +28,36 @@
   </head>
   <body>
     <h1>Olá, mundo!</h1>
+    <!-- Barra de navegação superior -->
+    <header>
+      <nav class="navbar navbar-expand-sm navbar-light bg-warning">
+        <div class="container">
+          <a href="#"> <img src="./img/logo.png" width="142" /></a>
+          <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a href="" class="nav-link">Home</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Resource</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Price</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Benefits</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="btn btn-outline-light ml-4">Sign in</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <!-- Fim da Barra de navegação superior -->
 
-    <!-- JavaScript (Opcional) -->
-    <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
+
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
