--- a/finans/index.html
+++ b/finans/index.html
@@ -24,10 +24,37 @@
       crossorigin="anonymous"
     />
 
-    <title>Olá, mundo!</title>
+    <link rel="stylesheet" type="text/css" href="./css/style.css" />
+
+    <title>Finans</title>
   </head>
   <body>
-    <h1>Olá, mundo!</h1>
+    <header>
+      <nav class="navbar navbar-expand-sm navbar-light bg-warning">
+        <div class="container">
+          <a href="#"> <img src="./img/logo.png" width="142" /></a>
+          <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a href="" class="nav-link">Home</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Resource</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Price</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Benefits</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="btn btn-outline-light ml-4">Sign in</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
