--- a/Padrao/index.html
+++ b/Padrao/index.html
@@ -29,11 +29,23 @@
   <body>
     <h1>Olá, mundo!</h1>
     <!-- Barra de navegação superior -->
+  </head>
+  <body>
     <header>
       <nav class="navbar navbar-expand-sm navbar-light bg-warning">
         <div class="container">
-          <a href="#"> <img src="./img/logo.png" width="142" /></a>
-          <div class="collapse navbar-collapse">
+          <a href="#" class="navbar-brand">
+            <img src="img/logo.png" width="142" />
+          </a>
+          <button
+            class="navbar-toggler"
+            data-toggle="collapse"
+            data-target="#nav-principal"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="nav-principal">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
                 <a href="" class="nav-link">Home</a>
