--- a/finans/index.html
+++ b/finans/index.html
@@ -32,8 +32,18 @@
     <header>
       <nav class="navbar navbar-expand-sm navbar-light bg-warning">
         <div class="container">
-          <a href="#"> <img src="./img/logo.png" width="142" /></a>
-          <div class="collapse navbar-collapse">
+          <a href="#" class="navbar-brand">
+            <img src="img/logo.png" width="142" />
+          </a>
+          <button
+            class="navbar-toggler"
+            data-toggle="collapse"
+            data-target="#nav-principal"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="nav-principal">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
                 <a href="" class="nav-link">Home</a>
@@ -55,6 +65,19 @@
         </div>
       </nav>
     </header>
+
+    <section id="home">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            texto
+          </div>
+          <div class="col-md-6">
+            imagem
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
