Aula 3 - Projeto Fin

--- a/finans/index.html
+++ b/finans/index.html
@@ -69,11 +69,39 @@
     <section id="home">
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
-            texto
+          <div class="col-md-6 d-flex">
+            <div class="align-self-center">
+              <h1 class="display-4">Suas contas descomplicadas</h1>
+              <p>
+                Estamos em mais de 1 milhão de celulares. O finans atualemnte é
+                a melhor ferramenta online para gerenciar sua vida financeira.
+              </p>
+              <form class="mt-4">
+                <div class="input-group">
+                  <input
+                    type="text"
+                    placeholder="Seu e-mail"
+                    class="form-control"
+                  />
+                  <button type="button" class="btn btn-primary">
+                    Cadastre-se
+                  </button>
+                </div>
+              </form>
+
+              <p>
+                Disponível para
+                <a href="#" class="btn btn-outline-light mt-1">
+                  <i class="fab fa-android fa-lg"></i
+                ></a>
+                <a href="#" class="btn btn-outline-light mt-1">
+                  <i class="fab fa-apple fa-lg"> </i>
+                </a>
+              </p>
+            </div>
           </div>
-          <div class="col-md-6">
-            imagem
+          <div class="col-md-6 d-none d-md-block">
+            <img src="./img/capa-mulher.png" alt="" />
           </div>
         </div>
       </div>
