--- a/finans/index.html
+++ b/finans/index.html
@@ -107,6 +107,109 @@
       </div>
     </section>
 
+    <section class="caixa">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 d-flex">
+            <div class="align-self-center">
+              <h2>Saiba para onde vai o seu dinheiro</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
+                beatae est eos eius sequi ipsum minus labore at neque recusandae
+                praesentium, exercitationem nihil quae dolor, animi blanditiis.
+                Architecto, aperiam amet.
+              </p>
+              <button class="btn btn-primary btn-sm">Veja Mais...</button>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <img src="./img/saiba.png" class="img-fluid" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="caixa">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img src="./img/juros.png" class="img-fluid" />
+          </div>
+          <div class="col-md-6 d-flex">
+            <div class="align-self-center">
+              <h2>Saiba para onde vai o seu dinheiro</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
+                beatae est eos eius sequi ipsum minus labore at neque recusandae
+                praesentium, exercitationem nihil quae dolor, animi blanditiis.
+                Architecto, aperiam amet.
+              </p>
+              <button class="btn btn-primary btn-sm">Veja Mais...</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="caixa">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <img src="./img/facil.png" class="img-fluid" />
+            <h4>Fácil de Usar</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Laudantium ipsum dignissimos quod beatae temporibus modi.
+            </p>
+          </div>
+          <div class="col-md-4">
+            <img src="./img/economize.png" class="img-fluid" />
+            <h4>Economize seu tempo</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Laudantium ipsum dignissimos quod beatae temporibus modi.
+            </p>
+          </div>
+          <div class="col-md-4">
+            <img src="./img/suporte.png" class="img-fluid" />
+            <h4>Suporte Amigo</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Laudantium ipsum dignissimos quod beatae temporibus modi.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="mt-4 mb-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <p>
+              <a href="">home</a>
+              <a href="">Recursos</a>
+              <a href="">Benefícios</a>
+              <a href="">Preços</a>
+            </p>
+          </div>
+          <div class="col-md-4 d-flex justify-content-end">
+            <a href="#" class="text-secondary ml-2">
+              <i class="fab fa-facebook fa-lg"> </i>
+            </a>
+            <a href="#" class="text-secondary ml-2">
+              <i class="fab fa-twitter fa-lg"> </i>
+            </a>
+            <a href="#" class="text-secondary ml-2">
+              <i class="fab fa-youtube fa-lg"> </i>
+            </a>
+            <a href="#" class="text-secondary ml-2">
+              <i class="fab fa-instagram fa-lg"> </i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
