Added Login Section

--- a/Padrao/index.html
+++ b/Padrao/index.html
@@ -36,13 +36,13 @@
           </a>
           <button
             class="navbar-toggler"
-            data-toggle="collapse"
-            data-target="#nav-principal"
+            data-bs-toggle="collapse"
+            data-bs-target="#nav-principal"
           >
             <span class="navbar-toggler-icon"></span>
           </button>
 
-          <div class="collapse navbar-collapse" id="nav-principal">
+          <div class="collapse navbar-collapse justify-content-end" id="nav-principal">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
                 <a href="" class="nav-link">Home</a>
