Create Project Spotify

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       <li>
         <a href="./finans/">Finans</a>
       </li>
+      <li>
+        <a href="./spotify/">Spotify</a>
+      </li>
     </ul>
   </body>
 </html>
