--- a/spotify/index.html
+++ b/spotify/index.html
@@ -43,7 +43,9 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-md navbar-light fixed-top bg-black">
+      <nav
+        class="navbar navbar-expand-md navbar-light fixed-top navbar-transparent"
+      >
         <div class="container">
           <a href="#" class="navbar-brand">
             <img src="./imagens/spotify.svg" width="142" />
@@ -70,6 +72,9 @@
               <li class="nav-item">
                 <a href="" class="nav-link">Baixar</a>
               </li>
+
+              <li class="nav-item divisor"></li>
+
               <li class="nav-item">
                 <a href="" class="nav-link">Increver-se</a>
               </li>
@@ -82,34 +87,17 @@
       </nav>
     </header>
     <!-- JavaScript (Opcional) -->
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
+    <section id="home" class="d-flex">
+      <div class="container align-self-center">
+        <div class="row">
+          <div class="col-md-12 capa">
+            <h1 class="display-1">Música para todos</h1>
+            <a href="#" class="btn btn-danger btn-lg">Aproveite spotify free</a>
+            <a href="#" class="btn btn-light btn-lg">Obter spotify Premium</a>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
