--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="./spotify/">Spotify</a>
       </li>
       <li>
-        <a href="./Mata Mosquito/">Spotify</a>
+        <a href="./Mata Mosquito/">Game: Mata Mosca</a>
       </li>
     </ul>
   </body>
